--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,5 +1,3 @@
-<p>This is the partial for view 1.</p>
+<p>Pick a date:</p>
 
-<p>If you click on me, I will disappear.</p>
-<p>Click me away!</p>
-<p>Click me too!</p>
+<h2><input type="text" id="myDatepicker" placeholder="Click to pick date" /></h2>
