--- a/app/index.html
+++ b/app/index.html
@@ -9,10 +9,10 @@
 	<link rel="stylesheet" href="app.css">
 </head>
 <body ng-cloak>
-	<ul class="menu">
+<!--	<ul class="menu">
 		<li><a href="#/view1">view1</a></li>
 		<li><a href="#/view2">view2</a></li>
-	</ul>
+	</ul>-->
 
 	<div ng-view></div>
 	<script data-main="require-config" src="bower_components/requirejs/require.js"></script>
