Adding datepicker from jquery ui.

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,3 +1,5 @@
-<p>Pick a date:</p>
+<h1>Selected: <input type="text" name="mydate" /></h1>
 
-<h2><input type="text" id="myDatepicker" placeholder="Click to pick date" /></h2>
+<p>Pick a date: <input type="text" id="myDatepicker" placeholder="Click to pick date" /></p>
+
+
