--- a/app/index.html
+++ b/app/index.html
@@ -1,20 +1,25 @@
 <!doctype html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
-	<link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
-	<script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
-	<title>My AngularJS App</title>
-	<link rel="stylesheet" href="app.css">
-</head>
-<body ng-cloak>
-<!--	<ul class="menu">
-		<li><a href="#/view1">view1</a></li>
-		<li><a href="#/view2">view2</a></li>
-	</ul>-->
+    <head>
+        <meta charset="utf-8">
+        <link rel="icon" href="css/images/favicon.ico" type="image/x-icon" />
+        <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
+        <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
+        <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
+        <link href="bower_components/jquery-ui/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/libs/oj/v1.1.2/alta/oj-alta-min.css" type="text/css"/>
+        <link rel="stylesheet" href="css/demo-alta-patterns-min.css"/>
+        <link rel="stylesheet" href="css/override.css" type="text/css"/>
+        <title>My AngularJS App</title>
+        <link rel="stylesheet" href="app.css">
+    </head>
+    <body ng-cloak>
+        <!--	<ul class="menu">
+                        <li><a href="#/view1">view1</a></li>
+                        <li><a href="#/view2">view2</a></li>
+                </ul>-->
 
-	<div ng-view></div>
-	<script data-main="require-config" src="bower_components/requirejs/require.js"></script>
-</body>
+        <div ng-view></div>
+        <script data-main="require-config" src="bower_components/requirejs/require.js"></script>
+    </body>
 </html>
