--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,5 +1,24 @@
-<h1>Selected: <input type="text" name="mydate" /></h1>
-
-<p>Pick a date: <input type="text" id="myDatepicker" placeholder="Click to pick date" /></p>
+<div ng-controller="View1Ctrl">
+    <div data-hbo-tabs id="tabs">
+        <ul>
+            <li><a href="#tabs-1">Tab 1</a></li>
+            <li><a href="#tabs-2">Tab 2</a></li>
+            <li><a href="#tabs-3">Tab 3</a></li>
+        </ul>
+        <div id="tabs-1">
+            <!--<h1>Selected: <input type="text" name="mydate" /></h1>-->
+            <!--<p>Pick a date: <input type="text" id="myDatepicker" placeholder="Click to pick date" /></p>-->
+            <div id="gauge"></div>
+            <p></p>
+            Value: <input id="gaugeInput"/>
+        </div>
+        <div id="tabs-2">
+            <p>Content for Tab 2</p>
+        </div>
+        <div id="tabs-3">
+            <p>Content for Tab 3</p>
+        </div>
+    </div>
+</div>
 
 
