Setting 'value' in input field in HTML so it can be changed.

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -10,7 +10,7 @@
             <!--<p>Pick a date: <input type="text" id="myDatepicker" placeholder="Click to pick date" /></p>-->
             <div id="gauge"></div>
             <p></p>
-            Value: <input id="gaugeInput"/>
+            Value: <input value="50" id="gaugeInput"/>
         </div>
         <div id="tabs-2">
             <p>Content for Tab 2</p>
